SIS2-702: Added read-more functionality to link article modal (rewrite read-more javascript function)

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/read-more.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/read-more.css
@@ -33,6 +33,10 @@
     color: var(--theme-button-color);
     font-weight: var(--base-font-weight);
     text-decoration: none;
+
+    .read-more__content-wrapper.expandable & {
+      display: block;
+    }
   }
 
   &__arrow {
