--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -461,6 +461,11 @@
     @media (--viewport-sm-min) {
       flex-flow: row;
     }
+
+    &__wrapper {
+      max-height: 500px;
+      overflow: auto;
+    }
   }
 
   &__image {
