--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--full.html.twig
@@ -71,9 +71,9 @@
 {{ attach_library('sis/article-page') }}
 {{ attach_library('sis/facts-box') }}
 {{ attach_library('sis/slider-pager-count') }}
-{{ attach_library('sis/modal-article') }}
 {{ attach_library('sis/related-articles') }}
 {{ attach_library('sis/inspiration-overview') }}
+{{ attach_library('sis/read-more') }}
 
 {% set classes = [
   'article-page',
@@ -82,45 +82,58 @@
 <article{{ attributes.addClass(classes) }}>
   <div class="article-page__modal">
     <h1>{{ label }}</h1>
-    <div class="article-page__modal__inner">
-      <div class="article-page__modal__content">
-        {% if node.field_subject[0] or node.field_class[0] or node.field_location[0] or node.field_season[0] %}
-          <div class="article-page__modal-tags">
-            {% if node.field_subject[0] %}
-              {% for subject in node.field_subject %}
-                <a href="/taxonomy/term/{{ subject.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ subject.entity.name.value }}</a>
-              {% endfor %}
-            {% endif %}
-            {% if node.field_class[0] %}
-              {% for class in node.field_class %}
-                <a href="/taxonomy/term/{{ class.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ class.entity.name.value }}</a>
-              {% endfor %}
-            {% endif %}
-            {% if node.field_location[0] %}
-              {% for location in node.field_location %}
-                <a href="/taxonomy/term/{{ location.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ location.entity.name.value }}</a>
-              {% endfor %}
-            {% endif %}
-            {% if node.field_season[0] %}
-              {% for season in node.field_season %}
-                <a href="/taxonomy/term/{{ season.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ season.entity.name.value }}</a>
-              {% endfor %}
-            {% endif %}
+    <div class="article-page__modal__inner__wrapper">
+      <div class="article-page__modal__inner">
+        <div class="article-page__modal__content">
+          {% if node.field_subject[0] or node.field_class[0] or node.field_location[0] or node.field_season[0] %}
+            <div class="article-page__modal-tags">
+              {% if node.field_subject[0] %}
+                {% for subject in node.field_subject %}
+                  <a href="/taxonomy/term/{{ subject.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ subject.entity.name.value }}</a>
+                {% endfor %}
+              {% endif %}
+              {% if node.field_class[0] %}
+                {% for class in node.field_class %}
+                  <a href="/taxonomy/term/{{ class.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ class.entity.name.value }}</a>
+                {% endfor %}
+              {% endif %}
+              {% if node.field_location[0] %}
+                {% for location in node.field_location %}
+                  <a href="/taxonomy/term/{{ location.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ location.entity.name.value }}</a>
+                {% endfor %}
+              {% endif %}
+              {% if node.field_season[0] %}
+                {% for season in node.field_season %}
+                  <a href="/taxonomy/term/{{ season.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ season.entity.name.value }}</a>
+                {% endfor %}
+              {% endif %}
+            </div>
+          {% endif %}
+          <div class="read-more__content-wrapper">
+            <div class="read-more__content">
+              {{ content.body }}
+            </div>
+            <a href="#" class="read-more__trigger">
+              <div class="read-more__label--expanded">{{ 'Hide'|t }}</div>
+              <div class="read-more__label--collapsed">{{ 'Read more'|t }}</div>
+              <div class="read-more__arrow">
+                <span></span>
+              </div>
+            </a>
           </div>
-        {% endif %}
-        {{ content.body }}
-        {% if content.field_external_link_logo[0] %}
-          <div class="article-page__modal__image-logo">
-            {{ content.field_external_link_logo }}
-          </div>
-        {% endif %}
-      </div>
-      <div class="article-page__modal__image">
-        {% if content.field_list_media[0] %}
-          {{ content.field_list_media }}
-        {% elseif content.field_list_media_anonymous[0]%}
-          {{ content.field_list_media_anonymous }}
-        {% endif %}
+          {% if content.field_external_link_logo[0] %}
+            <div class="article-page__modal__image-logo">
+              {{ content.field_external_link_logo }}
+            </div>
+          {% endif %}
+        </div>
+        <div class="article-page__modal__image">
+          {% if content.field_list_media[0] %}
+            {{ content.field_list_media }}
+          {% elseif content.field_list_media_anonymous[0]%}
+            {{ content.field_list_media_anonymous }}
+          {% endif %}
+        </div>
       </div>
     </div>
     <div class="article-page__modal__footer">
