--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -128,7 +128,7 @@
             <span class="print-button__text">Print</span>
           </a>
         </div>
-        {% if node.field_subject[0] or node.field_class[0] or node.field_location[0] or node.field_season[0] %}
+        {% if node.field_subject[0] or node.field_class[0] or node.field_location[0] or node.field_season[0] or node.sis_map_address_dawa.value or (node.lat.value and node.lon.value) %}
           <div class="facts-box">
             <div class="facts-box__title">
               Hvem, hvad, hvor
@@ -182,6 +182,36 @@
                   </div>
                 </div>
               {% endif %}
+              {% if node.field_subject[0] %}
+                <div class="facts-box__content-item">
+                  <div class="facts-box__content-item-label">
+                    Fag
+                  </div>
+                  <div class="facts-box__content-item-value">
+                    {% for subject in node.field_subject %}
+                      {{ subject.entity.name.value }}{{ loop.index != node.field_subject|length ? ', ' : '' }}
+                    {% endfor %}
+                  </div>
+                </div>
+              {% endif %}
+              {% if node.sis_map_address_dawa.value %}
+                <div class="facts-box__content-item">
+                  <div class="facts-box__content-item-label">Addresse</div>
+                  <div class="facts-box__content-item-value">{{ node.sis_map_address_dawa.value }}</div>
+                </div>
+              {% endif %}
+              {% if node.lat.value %}
+                <div class="facts-box__content-item">
+                  <div class="facts-box__content-item-label">Breddegrad</div>
+                  <div class="facts-box__content-item-value">&nbsp;{{ node.lat.value }}</div>
+                </div>
+              {% endif %}
+              {% if node.lon.value %}
+                <div class="facts-box__content-item">
+                  <div class="facts-box__content-item-label">Længdegrad</div>
+                  <div class="facts-box__content-item-value">&nbsp;{{ node.lon.value }}</div>
+                </div>
+              {% endif %}
             </div>
           </div>
         {% endif %}
@@ -195,6 +225,7 @@
             </div>
           </div>
         {% endif %}
+
         {% if node.field_factboxes.value %}
           {% for factboxe in node.field_factboxes %}
             {% if factboxe.entity.field_factbox_content.value %}
