--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
@@ -41,14 +41,14 @@
       <div class="col-xs-12">
         <h2>{{ map_title }} - {{ org_name }}</h2>
       </div>
-      <div class="col-md-8 col-lg-7 col-xs-12">
+      <div class="col-lg-7 col-md-8 col-xs-12">
         På dette kort kan du finde artikler og lokationer oprettet af {{ org_name }}. Her kan du finde idéer og inspiration til aktiviteter og undervisningsforløb i naturen. Du kan finde et kort over alle brugernes materialer <a href="/kort">her</a>.
       </div>
     {% else %}
       <div class="col-xs-12">
         <h1>{{ map_title }}</h1>
       </div>
-      <div class="col-md-8 col-lg-7 col-xs-12">
+      <div class="col-lg-7 col-md-8 col-xs-12">
         {{ description_above_map }}
       </div>
     {% endif %}
@@ -59,11 +59,11 @@
       </button>
     </a>
 
-    <div class="col-md-8 col-lg-7 col-xs-12">
+    <div class="col-lg-7 col-md-8 col-xs-12">
       <div class="map-container"></div>
       <div class="result-list"></div>
     </div>
-    <div class="col-md-4 col-lg-3 col-xs-12 col-lg-offset-1 filters">
+    <div class="col-lg-3 col-md-4 col-sm-5 col-ms-6 col-xs-12 col-lg-offset-1 filters">
       <div class="same-line-text-and-icon">
         <div class="text">
           <h5>Stedbaserede materialer</h5>
