SIS2-751: Added print button to blog post pages + adjusted markup and print styling

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
@@ -75,4 +75,12 @@
     max-width: 100%;
     height: auto;
   }
+
+  @media print {
+    .blog-post--view-all-writers,
+    .blog-post__other-writers,
+    .news-page__latest {
+      display: none;
+    }
+  }
 }
