--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
@@ -104,21 +104,32 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-4 col-lg-4 col-lg-offset-1">
-        {% if current_writer %}
-          {{ current_writer }}
-        {% endif %}
-        {% if other_writers %}
-          <h3>Andre Skribenter</h3>
-            {% for writer in other_writers %}
-              {{ writer }}
-            {% endfor %}
+        <div class="print-button">
+          <a href="#" onclick="window.print()">
+            {% include '@reusable-component/svg-icon.twig' with {
+              'attributes': '',
+              'svgIconName': 'printer'
+            } %}
+            <span class="print-button__text">Print</span>
+          </a>
+        </div>
+        <div class="blog-post__other-writers">
+          {% if current_writer %}
+            {{ current_writer }}
           {% endif %}
-        <div class="view-all-writers-link">
-          <h4>Se alle skribenter</h4>
-          {% include '@reusable-component/svg-icon.twig' with {
-            'attributes': '',
-            'svgIconName': 'carret'
-          } %}
+          {% if other_writers %}
+            <h3>Andre Skribenter</h3>
+              {% for writer in other_writers %}
+                {{ writer }}
+              {% endfor %}
+            {% endif %}
+          <div class="view-all-writers-link">
+            <h4>Se alle skribenter</h4>
+            {% include '@reusable-component/svg-icon.twig' with {
+              'attributes': '',
+              'svgIconName': 'carret'
+            } %}
+          </div>
         </div>
       </div>
     </div>
