--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
@@ -75,14 +75,14 @@
     background: var(--color-white);
     border: 1px solid var(--color-blue);
     border-radius: 24px;
+  }
 
-    & .input {
-      min-height: 0;
-      padding: 0;
-      font-size: var(--base-font-size-small);
-      border: none;
-      border-radius: 0;
-    }
+  &__input-field .input {
+    min-height: 0;
+    padding: 0;
+    font-size: var(--base-font-size-small);
+    border: none;
+    border-radius: 0;
   }
 
   &__submit {
