--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/navigation/pager.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/navigation/pager.html.twig
@@ -36,11 +36,21 @@
   <nav class="pager js-pager" role="navigation" aria-labelledby="{{ heading_id }}">
     <h4 id="{{ heading_id }}" class="visually-hidden">{{ 'Pagination'|t }}</h4>
     <ul class="pager__items">
+      {# Print first item if we are not on the first page. #}
+      {% if items.first %}
+        <li class="pager__item pager__item--first">
+          <a href="{{ items.first.href }}" title="{{ 'Go to first page'|t }}"{{ items.first.attributes|without('href', 'title') }}>
+            <span class="visually-hidden">{{ 'First page'|t }}</span>
+            <span aria-hidden="true">{{ items.first.text|default('« First'|t) }}</span>
+          </a>
+        </li>
+      {% endif %}
+      {# Print previous item if we are not on the first page. #}
       {% if items.previous %}
         <li class="pager__item pager__item--previous">
-          <a href="{{ items.previous.href }}" title="{{ 'Go to next page'|t }}"
-             rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
-            <span aria-hidden="true">{{ items.next.text|default('Previous page'|t) }}</span>
+          <a href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
+            <span class="visually-hidden">{{ 'Previous page'|t }}</span>
+            <span aria-hidden="true">{{ items.previous.text|default('‹ Previous'|t) }}</span>
           </a>
         </li>
       {% endif %}
@@ -67,26 +77,22 @@
       {# Add an ellipsis if there are further next pages. #}
       {% if ellipses.next %}
         <li class="pager__item pager__item--ellipsis" role="presentation">&hellip;</li>
-
-        {# Print last item if we are not on the last page. #}
-        {% if items.last %}
-          <li class="pager__item pager__item--last">
-            <a href="{{ items.last.href }}"
-               title="{{ 'Go to last page'|t }}"{{ items.last.attributes|without('href', 'title') }}>
-              <span class="visually-hidden">{{ 'Last page'|t }}</span>
-              <span aria-hidden="true">{{ items.last.page_number }}</span>
-            </a>
-          </li>
-        {% endif %}
-
-
       {% endif %}
       {# Print next item if we are not on the last page. #}
       {% if items.next %}
         <li class="pager__item pager__item--next">
-          <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}"
-             rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
-            <span aria-hidden="true">{{ items.next.text|default('Next page'|t) }}</span>
+          <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
+            <span class="visually-hidden">{{ 'Next page'|t }}</span>
+            <span aria-hidden="true">{{ items.next.text|default('Next ›'|t) }}</span>
+          </a>
+        </li>
+      {% endif %}
+      {# Print last item if we are not on the last page. #}
+      {% if items.last %}
+        <li class="pager__item pager__item--last">
+          <a href="{{ items.last.href }}" title="{{ 'Go to last page'|t }}"{{ items.last.attributes|without('href', 'title') }}>
+            <span class="visually-hidden">{{ 'Last page'|t }}</span>
+            <span aria-hidden="true">{{ items.last.text|default('Last »'|t) }}</span>
           </a>
         </li>
       {% endif %}
