--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--full.html.twig
@@ -102,7 +102,7 @@
             } %}
           {% endif %}
           <div class="news-page__description">
-            {{ node.body.summary }}
+            {{ content.field_description }}
           </div>
           <div class="news-page__image">
             {{ content.field_news_image }}
