SIS2-786: Style and markup changes to facts-box to fix text being placed on top of itself on iPhone

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -268,7 +268,7 @@
             <div class="facts-box__title">
               Undervisningsm&aring;l
             </div>
-            <div class="facts-box__content undervi-box">
+            <div class="facts-box__content{{ content.field_teaching_goals|render|striptags|length > 300 ? ' undervi-box' }}">
               {{ content.field_teaching_goals }}
             </div>
             {% if content.field_teaching_goals|render|striptags|length > 300 %}
