SIS2-790: Added rel="nofollow" to link article link button in the modal footer

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--full.html.twig
@@ -137,7 +137,7 @@
       </div>
     </div>
     <div class="article-page__modal__footer">
-      <a href="{{ content.field_external_link.0['#url'] }}" class="button button--green" target="_blank">Gå til indhold</a>
+      <a href="{{ content.field_external_link.0['#url'] }}" class="button button--green" target="_blank" rel="nofollow">Gå til indhold</a>
     </div>
   </div>
 </article>
