--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -446,8 +446,10 @@
           <div class="col-xs-12">
             <div class="article-page__related-items js-article-page__related-items swiper">
               <div class="swiper-wrapper">
-                {% for key, item in content.field_article_related if key|first != '#' %}
-                  {{ item }}
+                {% for key, item in content.field_article_related %}
+                  {%  if key|first != '#' %}
+                    {{ item }}
+                  {% endif %}
                 {% endfor %}
               </div>
             </div>
