Changed node article full to show editor image before anonymous image

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -105,12 +105,12 @@
             {{ content.field_description }}
           </div>
           <div class="article-page__image">
-            {% if content.field_article_image_anonymous|render is not empty %}
-                {{ content.field_article_image_anonymous|render }}
-              {% elseif content.field_article_image|render is not empty %}
-                {{ content.field_article_image|render }}
-              {% elseif content.field_article_image_migrated|render is not empty %}
-                {{ content.field_article_image_migrated|render }}
+            {% if content.field_article_image|render is not empty %}
+              {{ content.field_article_image|render }}
+            {% elseif content.field_article_image_anonymous|render is not empty %}
+              {{ content.field_article_image_anonymous|render }}
+            {% elseif content.field_article_image_migrated|render is not empty %}
+              {{ content.field_article_image_migrated|render }}
             {% endif %}
           </div>
           <div class="article-page__content">
