SIS2-887: Change the blue theme color and give sub-nav titles a bg color

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/sub-navigation.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/sub-navigation.css
@@ -53,6 +53,7 @@
       position: relative;
       margin-bottom: 15px;
       padding-left: 30px;
+      background-color: var(--color-gray-light);
 
       svg {
         position: absolute;
@@ -64,6 +65,7 @@
 
     &-description {
       font-weight: 400;
+      background-color: var(--color-gray-light);
     }
   }
 }
