--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -83,8 +83,8 @@
   --grid-section-spacing-mobile: calc(var(--grid-section-spacing) / 2);
   --gutter-width: 36px;
   --gutter-width-mobile: 48px;
-  --half-gutter-width: calc(var(--gutter-width) * 0.5);
-  --half-gutter-width-mobile: calc(var(--gutter-width-mobile) * 0.5);
+  --half-gutter-width: calc(var(--gutter-width) * .5);
+  --half-gutter-width-mobile: calc(var(--gutter-width-mobile) * .5);
   --half-gutter-compensation: calc(var(--half-gutter-width) * -1);
   --half-gutter-compensation-mobile: calc(var(--half-gutter-width-mobile) * -1);
   --container-spacing-mobile: 24px;
